<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.jprod.jerryletehen.setyourvolumesimple.MainActivity"
        android:layout_marginTop="0dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true">

            <android.support.design.widget.FloatingActionButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                app:fabSize="mini"
                app:srcCompat="@android:drawable/ic_input_add"
                android:id="@+id/fab"
                android:layout_gravity="bottom|end"
                app:backgroundTint="@color/fab_color" />
            <android.support.design.widget.FloatingActionButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                app:fabSize="mini"
                app:srcCompat="@android:drawable/ic_lock_silent_mode_off"
                android:id="@+id/fab1"
                android:layout_gravity="bottom|start"
                app:backgroundTint="@color/fab_color" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/linear">

                <TextView
                    android:text="@string/main_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/main_text"
                    android:textSize="22sp"
                    android:textStyle="normal|bold"
                    android:textAllCaps="false"
                    android:textAlignment="center"
                    android:textColor="@color/bg_dark"
                    android:layout_marginBottom="15dp" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/frame_1"
                    android:layout_marginBottom="25dp"
                    android:background="@color/frame_bg"
                    android:paddingTop="5dp">

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginBottom="5dp">

                            <TextView
                                android:text="@string/text_time"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/text_time_1"
                                android:layout_weight="1"
                                android:textSize="20sp"
                                android:textStyle="normal|bold"
                                android:textColor="@color/grey_dark"
                                android:textAlignment="center" />

                            <TextView
                                android:text="@string/text_volume"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/text_volume_1"
                                android:layout_weight="1"
                                android:textColor="@android:color/darker_gray"
                                android:textStyle="normal|bold"
                                android:textAlignment="center"
                                android:textSize="20sp" />

                        </LinearLayout>

                        <Button
                            android:text="@string/set_button"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/set_button_1"
                            android:textStyle="normal|bold"
                            android:textAlignment="center"
                            android:textSize="18sp" />

                        <Button
                            android:text="@string/cancel_button"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/cancel_button_1"
                            android:textSize="18sp"
                            android:textStyle="normal|bold"
                            android:textAlignment="center" />

                    </LinearLayout>
                </FrameLayout>

            </LinearLayout>


        </FrameLayout>



    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>
