<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.jprod.jerryletehen.setyourvolumesimple.MainActivity"
        android:layout_marginTop="0dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true">

            <android.support.design.widget.FloatingActionButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                app:fabSize="mini"
                app:srcCompat="@android:drawable/ic_menu_revert"
                android:id="@+id/fab_back"
                android:layout_gravity="bottom|start"
                app:backgroundTint="@color/fab_color" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/linear">

                <TextView
                    android:text="@string/main_text_setup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/main_text_setup"
                    android:textSize="22sp"
                    android:textStyle="normal|bold"
                    android:textAllCaps="false"
                    android:textAlignment="center"
                    android:textColor="@color/bg_dark"
                    android:layout_marginBottom="15dp" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView2"
                        android:layout_weight="3"
                        android:text="@string/ring"
                        android:textSize="16sp"
                        android:textAlignment="textEnd"
                        android:textAllCaps="false"
                        android:textColor="@color/grey_dark"
                        android:paddingRight="10dp"
                        android:paddingLeft="10dp"
                        android:textStyle="normal|italic" />

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/ring"
                        android:layout_weight="2"
                        android:textAlignment="textStart"
                        android:checked="true"
                        android:focusable="false"
                        android:clickable="false" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp">

                    <TextView
                        android:text="@string/notification"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:textSize="16sp"
                        android:textAlignment="textEnd"
                        android:textAllCaps="false"
                        android:textColor="@color/bg_dark"
                        android:paddingRight="10dp"
                        android:paddingLeft="10dp" />

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:id="@+id/notification"
                        android:textAlignment="textStart" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp">

                    <TextView
                        android:text="@string/voice_call"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:textSize="16sp"
                        android:textAlignment="textEnd"
                        android:textAllCaps="false"
                        android:textColor="@color/bg_dark"
                        android:paddingRight="10dp"
                        android:paddingLeft="10dp" />

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:textAlignment="textStart"
                        android:id="@+id/voice_call" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp">

                    <TextView
                        android:text="@string/system"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:textSize="16sp"
                        android:textAlignment="textEnd"
                        android:textAllCaps="false"
                        android:textColor="@color/bg_dark"
                        android:paddingRight="10dp"
                        android:paddingLeft="10dp" />

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:id="@+id/system"
                        android:textAlignment="textStart" />
                </LinearLayout>

            </LinearLayout>


        </FrameLayout>



    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>
